syntax = "proto3";

package kdo.v1.lp;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";
import "google/api/resource.proto";
import "google/api/client.proto";

option go_package = "github.com/meritz-corp/cds-apis/go/kdo/v1;kdo";

// LP 서비스는 ETF LP 관련 서비스를 제공합니다.
service LpService {
  // ETF LP 조회
  rpc GetEtfLp(GetEtfLpRequest) returns (EtfLp) {
    option (google.api.http) = {
      get: "/v1/lps/{etf=etfs/*}/{fund=funds/*}"
    };
    option (google.api.method_signature) = "";
  }

  // ETF LP 조회
  rpc ListEtfLps(ListEtfLpsRequest) returns (ListEtfLpsResponse) {
    option (google.api.http) = {
      get: "/v1/lps"
    };
    option (google.api.method_signature) = "";
  }

  // ETF LP 업데이트
  rpc UpdateEtfLp(UpdateEtfLpRequest) returns (EtfLp) {
    option (google.api.http) = {
      patch: "/v1/lps/etfs/{lp.symbol=*}/funds/{lp.fund_code=*}"
      body: "lp"
    };
    option (google.api.method_signature) = "lp,update_mask";
  }

  // ETF LP 상태 조회
  rpc GetEtfLpStatus(GetEtfLpStatusRequest) returns (EtfLpStatus) {
    option (google.api.http) = {
      get: "/v1/lps/{etf=etfs/*}/{fund=funds/*}/status"
    };
    option (google.api.method_signature) = "etf,fund";
  }

  // ETF LP 상태 조회
  rpc ListEtfLpStatuses(ListEtfLpStatusesRequest) returns (ListEtfLpStatusesResponse) {
    option (google.api.http) = {
      get: "/v1/lps/etfs/*/funds/*/status"
    };
    option (google.api.method_signature) = "";
  }


  // ETF LP 상태 스트리밍 (실시간 업데이트)
  rpc StreamEtfLpStatus(StreamEtfLpStatusRequest) returns (stream EtfLpStatus) {
    option (google.api.http) = {
      get: "/v1/lps/{etf=etfs/*}/{fund=funds/*}/status:stream"
    };
    option (google.api.method_signature) = "etf,fund,update_interval_seconds";
  }

  // ETF LP 시작
  rpc StartEtfLp(StartEtfLpRequest) returns (StartEtfLpResponse) {
    option (google.api.http) = {
      post: "/v1/lps/{etf=etfs/*}/{fund=funds/*}:start"
      body: "*"
    };
  }

  // ETF LP 중지
  rpc StopEtfLp(StopEtfLpRequest) returns (StopEtfLpResponse) {
    option (google.api.http) = {
      post: "/v1/lps/{etf=etfs/*}/{fund=funds/*}:stop"
      body: "*"
    };
  }

  // ETF LP 이벤트 실시간 스트리밍
  rpc StreamLpEvents(StreamLpEventsRequest) returns (stream EtfLpEvent) {
    option (google.api.http) = {
      get: "/v1/lps/{etf=etfs/*}/{fund=funds/*}/events:stream"
    };
    option (google.api.method_signature) = "etf";
  }

  // 사용자 주문장 업데이트를 가져오기
  rpc GetUserOrderbook(GetUserOrderBookRequest) returns (UserOrderbookData) {
    option (google.api.http) = {
      get: "/v1/lps/{etf=etfs/*}/{fund=funds/*}/orderbook"
    };
  }

  // 사용자 주문장 업데이트를 스트리밍
  rpc StreamUserOrderbook(GetUserOrderBookRequest) returns (stream UserOrderbookData) {
    option (google.api.http) = {
      get: "/v1/lps/{etf=etfs/*}/{fund=funds/*}/orderbook:stream"
    };
  }
}

// ETF LP 설정
message EtfLp {
  // ETF 심볼
  string symbol = 1;

  // Fund
  string fund_code = 2;

  // Offset (호가 스프레드 조정, 원 단위, i64)
  int64 bid_offset = 4;

  // Offset (호가 스프레드 조정, 원 단위, i64)
  int64 ask_offset = 5;

  // Basis 스프레드 (원 단위, i64)
  int64 basis = 6;

  // 주문 수량 (i64)
  int64 quantity = 7;

  // 호가 깊이 (양방향 레벨 수)
  uint32 depth = 8;

  // ETF tick 크기 (원 단위, i64)
  int64 tick_size = 9;

  // 동적 offset 조정 설정
  OffsetAdjustmentConfig offset_adjustment_config = 10;
}

// 복제 방법
enum ReplicationMethod {
  REPLICATION_METHOD_UNSPECIFIED = 0;
  REPLICATION_METHOD_PHYSICAL = 1;
  REPLICATION_METHOD_SYNTHETIC = 2;
  REPLICATION_METHOD_FUTURES_BASED = 3;
}

// ========== ETF LP Status Messages ==========

// ETF LP 상태
message EtfLpStatus {
  // ETF 심볼
  string etf_symbol = 1;

  // 펀드 코드
  string fund_code = 2;

  // Basis 스프레드 (원 단위, i64)
  int64 basis = 6;

  // 주문 수량 (i64)
  int64 quantity = 7;

  // LP 상태
  EtfLpState state = 8;

  // 가격 정보
  LpPricing pricing = 9;

  // 체결 통계
  FillStatistics fill_statistics = 10;

  // 동적 offset 조정 설정 (optional)
  OffsetAdjustmentConfig offset_adjustment_config = 11;

  // 동적 offset 조정 런타임 상태 (optional)
  DynamicOffsetState dynamic_offset_state = 12;
}

// 순매매량 기반 조정 전략
enum PositionAdjustmentStrategy {
  POSITION_ADJUSTMENT_STRATEGY_UNSPECIFIED = 0;
  // 회피: 순매수 과다 시 매수offset 증가 (덜 공격적으로 매수)
  POSITION_ADJUSTMENT_STRATEGY_AVOIDANCE = 1;
  // 매매회전: 순매수 과다 시 매도offset 감소 (더 공격적으로 매도)
  POSITION_ADJUSTMENT_STRATEGY_TURNOVER = 2;
  // 모두 적용: 순매수 과다 시 매수offset 증가 및 매도offset 감소
  POSITION_ADJUSTMENT_STRATEGY_ALL = 10;
}

// 자동 offset 조정 설정
message OffsetAdjustmentConfig {
  // NAV 밴드 설정
  int64 min_offset = 1;
  int64 max_offset = 2;

  // 시간 기반 조정
  bool time_adjustment_enabled = 3;
  uint64 adjustment_interval_secs = 4;
  int64 adjustment_step = 5;
  bool reset_on_fill = 6;

  // 순매매량 기반 조정
  bool position_adjustment_enabled = 7;
  int64 position_threshold = 8;
  PositionAdjustmentStrategy position_strategy = 9;
  int64 position_adjustment_step = 10;
}

// 동적 offset 조정 런타임 상태
message DynamicOffsetState {
  // 현재 동적 bid offset
  int64 current_bid_offset = 1;
  // 현재 동적 ask offset
  int64 current_ask_offset = 2;
  // 순매매량 (+ = 순매수, - = 순매도)
  int64 net_position = 3;
  // 조정 활성화 여부
  bool is_active = 4;
}

// ETF 체결 통계 (매수/매도 체결량 및 평균 단가)
message FillStatistics {
  // 매수 체결량
  int64 buy_filled_quantity = 1;

  // 매도 체결량
  int64 sell_filled_quantity = 2;

  // 매수 총금액 (평균 단가 계산용)
  string buy_total_amount = 3;

  // 매도 총금액 (평균 단가 계산용)
  string sell_total_amount = 4;
}

// ETF LP 상태 enum
enum EtfLpState {
  ETF_LP_STATE_UNSPECIFIED = 0;
  ETF_LP_STATE_IDLE = 1;
  ETF_LP_STATE_RUNNING = 2;
  ETF_LP_STATE_STOPPING = 3;
  ETF_LP_STATE_ERROR = 4;
}

// 주문 통계
message OrderStats {
  // 총 전송 주문 수
  uint64 total_orders_sent = 1;

  // 접수된 주문 수
  uint64 orders_accepted = 2;

  // 거부된 주문 수
  uint64 orders_rejected = 3;

  // 체결된 주문 수
  uint64 orders_filled = 4;

  // 총 체결 수량
  int64 total_filled_quantity = 5;

  // 일일 체결 수량
  int64 daily_filled_quantity = 6;
}

// Order Limiter 상태
message OrderLimitStatus {
  // 일일 누적 체결 수량 (i64)
  int64 daily_filled_quantity = 1;

  // 일일 누적 체결 수량 한도 (i64)
  int64 daily_cumulative_limit = 2;

  // 시간 프레임별 주문 개수 현황
  repeated TimeFrameStatus time_frame_status = 3;

  // 일일 사용률 (%)
  double daily_usage_percent = 4;
}

// 시간 프레임별 상태
message TimeFrameStatus {
  // 시간 윈도우 (초)
  uint64 window_seconds = 1;

  // 현재 윈도우 내 주문 개수
  uint32 current_count = 2;

  // 최대 주문 개수
  uint32 max_orders = 3;

  // 사용률 (%)
  double usage_percent = 4;
}

// LP 가격 정보
message LpPricing {
  // ETF 가격 (원 단위)
  string etf_price = 1;

  // 구성 종목 가격 맵 (종목 코드 -> 가격, 원 단위)
  map<string, string> constituents_price = 2;

  // ETF NAV (원 단위)
  string etf_nav = 3;
}

// ========== Request/Response Messages ==========
// GetEtfLp
message GetEtfLpRequest {
  string etf = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Etf"
    }
  ];

  string fund = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];
}

// ListEtfLps
message ListEtfLpsRequest {
  // 페이지 크기 (optional)
  optional uint32 page_size = 1;

  // 페이지 토큰 (optional, for pagination)
  optional string page_token = 2;

  // Available Sequence and Operator
  // * etf_symbol
  //   * `equal`, `contains`
  // * fund_code
  //   * `equal`, `contains`
  //
  // Examples
  // * filter=etf_symbol:"005930"
  // * filter=fund_code="0159"
  string filter = 3;
}

message ListEtfLpsResponse {
  // ETF 목록
  repeated EtfLp etf_lps = 1;

  // 다음 페이지 토큰
  string next_page_token = 2;
}

message ListEtfLpStatusesRequest {
  // 페이지 크기 (optional)
  optional uint32 page_size = 1;

  // 페이지 토큰 (optional, for pagination)
  optional string page_token = 2;

  // Available Sequence and Operator
  // * etf_symbol
  //   * `equal`, `contains`
  // * fund_code
  //   * `equal`, `contains`
  // * state
  //   * `equal`
  // * fill_satistics.buy_filled_quantity
  //   * `greater_than`, `less_than`
  //
  // Examples
  // * filter=etf_symbol:"005930"
  // * filter=fund_code="0159"
  // * filter=state=ETF_LP_STATE_RUNNING
  // * filter=fill_statistics.buy_filled_quantity > 1000

  string filter = 3 [(google.api.field_behavior) = OPTIONAL];

  // 오더링 조건. (optional, AIP-132)
  //
  // Supported Fields
  // * "fill_statistics.buy_filled_quantity", "fill_statistics.sell_filled_quantity"
  //
  // Examples
  // * order_by=fill_statistics.buy_filled_quantity desc
  string order_by = 5 [(google.api.field_behavior) = OPTIONAL];
}

message ListEtfLpStatusesResponse {
  // ETF 목록
  repeated EtfLpStatus etf_lp_statuses = 1;

  // 다음 페이지 토큰
  string next_page_token = 2;
}


// UpdateEtfLp
message UpdateEtfLpRequest {
  EtfLp lp = 1 [
    (google.api.field_behavior) = REQUIRED
  ];

  google.protobuf.FieldMask update_mask = 2;
}


// GetEtfLpStatus
message GetEtfLpStatusRequest {
  string etf = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Etf"
    }
  ];

  string fund = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];
}
// StreamEtfLpStatus
message StreamEtfLpStatusRequest {
  string etf = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Etf"
    }
  ];

  string fund = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];

  // 업데이트 간격 (초, optional, default: 1)
  optional uint32 update_interval_seconds = 3;
}

// ETF LP 시작 요청
message StartEtfLpRequest {
  string etf = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Etf"
    }
  ];

  string fund = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];
}

// ETF LP 시작 응답
message StartEtfLpResponse {
  // LP 상태
  EtfLpStatus status = 1;

  // 메시지
  string message = 2;
}

// ETF LP 중지 요청
message StopEtfLpRequest {
  string etf = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Etf"
    }
  ];

  string fund = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];
}

// ETF LP 중지 응답
message StopEtfLpResponse {
  // LP 상태
  EtfLpStatus status = 1;

  // 메시지
  string message = 2;
}

// StreamEtfErrors 요청
message StreamLpEventsRequest {
  string etf = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Etf"
    }
  ];

  string fund = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];
}

// ETF LP 에러 이벤트
message EtfLpEvent {
  // ETF 심볼
  string symbol = 1;

  // 작업 타입
  TaskType task_type = 2;

  // 이벤트 타입
  LpEventType type = 3;

  // 상세 메시지
  string message = 4;

  // 발생 시간
  google.protobuf.Timestamp timestamp = 5;

  // 이벤트 레벨
  LpEventLevel level = 6;
}

// 작업 타입
enum TaskType {
  TASK_TYPE_UNSPECIFIED = 0;
  TASK_TYPE_QUOTE = 1;
  TASK_TYPE_HEDGE = 2;
}

// 이벤트 타입
enum LpEventType {
  LP_EVENT_TYPE_UNSPECIFIED = 0;
  LP_EVENT_TYPE_INITIALIZATION = 1;     // 초기화 실패
  LP_EVENT_TYPE_PRICE_UPDATE = 2;       // 가격 업데이트 실패
  LP_EVENT_TYPE_ORDER_SUBMIT = 3;       // 주문 제출 실패
  LP_EVENT_TYPE_ORDER_PROCESSING = 4;   // 주문 처리 실패
  LP_EVENT_TYPE_NAV_CALCULATION = 5;    // NAV 계산 실패
  LP_EVENT_TYPE_ORDER_BOOK_UPDATE = 6;  // 오더북 업데이트 실패
  LP_EVENT_TYPE_ORDER_LIMIT_EXCEEDED = 7;     // 주문 한도 초과
  LP_EVENT_TYPE_FUND_LIMIT_EXCEEDED = 8;     // 펀드 한도 초과
  LP_EVENT_TYPE_STOCK_INVENTORY_EXCEEDED = 9;        // 주식 재고 초과
  LP_EVENT_TYPE_SYSTEM_ERROR = 12;       // 시스템 에러
  LP_EVENT_TYPE_MARKET_SESSION = 13;     // 시장 세션 관련 에러
  LP_EVENT_TYPE_FUND_UPDATE = 14;        // 펀드 정보 업데이트 실패
}

// 이벤트 레벨
enum LpEventLevel {
  LP_EVENT_LEVEL_UNSPECIFIED = 0;
  LP_EVENT_LEVEL_DEBUG = 1;    // 디버그 정보
  LP_EVENT_LEVEL_INFO = 2;     // 정보성 메시지
  LP_EVENT_LEVEL_WARNING = 3;  // 경고
  LP_EVENT_LEVEL_ERROR = 4;    // 에러
  LP_EVENT_LEVEL_CRITICAL = 5; // 치명적 에러
}

// 주문 업데이트 스트리밍 요청
message GetUserOrderBookRequest {
  string etf = 1 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Etf"
    }
  ];

  string fund = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.resource_reference) = {
      type: "kdo.cdsapis.xyz/Fund"
    }
  ];
}

// 주문 업데이트 정보
message UserOrderbookData {
  // 매수 호가 (10단계, AIP-144)
  repeated string bid_prices = 1;

  // 매도 호가 (10단계)
  repeated string ask_prices = 2;

  // 매수 수량 (10단계)
  repeated int64 bid_quantities = 3;

  // 매도 수량 (10단계)
  repeated int64 ask_quantities = 4;
}